chore: nginx 배포 설정 uwsgi와 nginx 연결

--- a/config/uwsgi/unistar.ini
+++ b/config/uwsgi/unistar.ini
@@ -6,7 +6,9 @@ home = /home/ubuntu/.local/share/virtualenvs/backend-django-mBWSQ3I4
 uid = ubuntu
 gid = ubuntu
 
-http = :8080
+socket = /tmp/unistar.sock
+chmod-socket = 666
+chown-socket = ubuntu:ubuntu
 
 enable-threads = true
 master = true
