--- a/config/nginx/unistar.conf
+++ b/config/nginx/unistar.conf
@@ -8,4 +8,7 @@ server {
         uwsgi_pass  unix:///tmp/unistar.sock;
         include     uwsgi_params;
     }
+    location /static/ {
+        alias /srv/backend-django/static/;
+    }
 }
