--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,8 @@ db.sqlite3
 #.env 파일(배포 환경에서는 서버에 직접 환경변수를 설정할 것)
 .env
 
-# AWS 중요 파일
-aws_info/
-
-#적용 가능한 코드들
-legacy.txt
+# 정보 파일
+info/
 
 # 로컬 미디어 파일
 media/
