--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ wheel = "*"
 boto3 = "*"
 django-storages = "*"
 mysqlclient = "*"
+dj-rest-auth = "*"
+django-allauth = "*"
 uwsgi = "*"
 
 [dev-packages]
