refactor: log 전체 설정 변경

--- a/config/uwsgi/unistar.ini
+++ b/config/uwsgi/unistar.ini
@@ -14,5 +14,5 @@ enable-threads = true
 master = true
 vacuum = true
 pidfile = /tmp/unistar.pid
-logto = /var/log/uwsgi/unistar/@(exec://date +%%Y-%%m-%%d).log
+logto = /srv/backend-django/logs/uwsgi.log
 log-reopen = true
