--- a/Pipfile
+++ b/Pipfile
@@ -4,25 +4,25 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-djangorestframework = "*"
-django-cors-headers = "*"
-pyjwt = "*"
-djangorestframework-simplejwt = "*"
-python-dotenv = "*"
-pillow = "*"
-boto3 = "*"
-wheel = "*"
-uwsgi = "*"
-django-storages = "*"
+django = "==5.0.2"
+djangorestframework = "==3.14.0"
+django-cors-headers = "==4.3.1"
+pyjwt = "==2.8.0"
+djangorestframework-simplejwt = "==5.3.1"
+python-dotenv = "==1.0.1"
+pillow = "==10.2.0"
+boto3 = "==1.34.50"
+wheel = "==0.42.0"
+uwsgi = "==2.0.24"
+django-storages = "==1.14.2"
 mysqlclient = "==2.1.0"
-dj-rest-auth = "*"
-django-allauth = "*"
-django-crontab = "*"
-google-auth = "*"
-google-auth-oauthlib = "*"
-pandas = "*"
-openpyxl = "*"
+dj-rest-auth = "==5.0.2"
+django-allauth = "==0.61.1"
+django-crontab = "==0.7.1"
+google-auth = "==2.28.1"
+google-auth-oauthlib = "==1.2.0"
+pandas = "==2.2.1"
+openpyxl = "==3.1.2"
 
 [dev-packages]
 black = "*"
